--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
         <div class="icon-flow-steps">
           <div class="icon-step">
             <img
-              src="images/icon_learning.svg"
+              src="images/dealer.jpeg"
               alt="講座受講アイコン"
               class="flow-icon"
             />
@@ -219,7 +219,7 @@
           <div class="arrow">→</div>
           <div class="icon-step">
             <img
-              src="images/icon_skill.svg"
+              src="images/dealer.jpeg"
               alt="スキル習得アイコン"
               class="flow-icon"
             />
@@ -228,7 +228,7 @@
           <div class="arrow">→</div>
           <div class="icon-step">
             <img
-              src="images/icon_test.svg"
+              src="images/dealer.jpeg"
               alt="試験・確認アイコン"
               class="flow-icon"
             />
