--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
           <div class="arrow">→</div>
           <div class="icon-step">
             <img
-              src="images/dealer.jpeg"
+              src="images/logo.png"
               alt="スキル習得アイコン"
               class="flow-icon"
             />
