--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </header>
 
     <section class="hero">
-      <img src="images/hero" alt="講座イメージ" style="display: none" />
+      <img src="images/dealer.jpeg" alt="講座イメージ" style="display: none" />
       <div class="content">
         <!-- 変更箇所 -->
         <h1>カード一枚が秘められた未来を呼び起こす。</h1>
@@ -237,7 +237,7 @@
           <div class="arrow">→</div>
           <div class="icon-step">
             <img
-              src="images/icon_introduce.svg"
+              src="images/logo.png"
               alt="提携先紹介アイコン"
               class="flow-icon"
             />
