--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </header>
 
     <section class="hero">
-      <img src="images/dealer.jpeg" alt="講座イメージ" style="display: none" />
+      <img src="images/dealer.jpeg" alt="講座イメージ" />
       <div class="content">
         <!-- 変更箇所 -->
         <h1>カード一枚が秘められた未来を呼び起こす。</h1>
