--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
   </head>
   <body>
     <header>
-      <div class="logo">１dayディーラークラス</div>
+      <div class="logo">
+        <img src="images/header.png" alt="講座受講アイコン" />
+      </div>
       <nav>
         <a href="#reason">選ばれる理由</a>
         <a href="#comparison">料金</a>
