--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
   </head>
   <body>
     <header>
-      <div class="logo">
-        <img src="images/header.png" alt="講座受講アイコン" />
-      </div>
+      <a href="/">
+        <img src="images/header.png" alt="サイトロゴ" class="logo" />
+      </a>
       <nav>
         <a href="#reason">選ばれる理由</a>
         <a href="#comparison">料金</a>
